test: update test for grade computation refactoring